--- a/memoria/text/decisiones.tex
+++ b/memoria/text/decisiones.tex
@@ -46,7 +46,7 @@ Por otro lado, a James se le ha asignado el informe de las ventas, ya que propor
     \label{fig:enter-label}
 \end{figure}
 \paragraph{}
-Por ultimo, hemos modificado el diagrama BPMN \ref{fab} para representar la interacción entre el módulo de fabricación con este módulo descrito. Este nuevo diagrama es la figura \ref{bi}
+Por último, hemos modificado el diagrama BPMN \ref{fab} para representar la interacción entre el módulo de fabricación con este módulo descrito. Este nuevo diagrama es la figura \ref{bi}
 
 \begin{figure}[h]
     \centering
