--- a/memoria/text/gestFab.tex
+++ b/memoria/text/gestFab.tex
@@ -1,5 +1,5 @@
 
-\section{Gestión de la fabricación}
+\section{Gestión de producción}
 \subsection{Autoevaluación}
 En esta sección se ha cumplido los objetivos correspondientes al 10.
 \subsection{Introducción}
@@ -25,6 +25,7 @@ También se ha automatizado la fabricación de los vehículos por lo que cuando 
 \subsection{Resultados y análisis}
 \paragraph{}
 En este apartado se ha evaluado la capacidad de gestionar la fabricación que ofrece Odoo mediante los módulos de Fabricación, Inventario y Compras. Se han hecho configuraciones para personalizar estos módulos a las necesidades de las pruebas que se querían realizar. Además, se ha creado el producto Coche Mini que tiene una lista de materiales con los que se fabricará, 4 ruedas, un chasis y un motor.
+\newpage
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosGestFab/coche.png}
@@ -40,15 +41,16 @@ Se ha realizado la fabricación de un coche Mini de forma manual.
     \label{fig:enter-label}
 \end{figure}
 \paragraph{}
-Por último, se ha automatizado la compra y transferencia de productos entre almacenes para cumplir con la producción necesaria.
+A continuación, se ha automatizado la compra y transferencia de productos entre almacenes para cumplir con la producción necesaria.
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosGestFab/reabastecimiento.png}
     \caption{Orden de reabastecimiento de los productos}
     \label{fig:enter-label}
 \end{figure}
+\newpage
 \paragraph{}
-Por ultimo, se ha realizado un diagrama BPMN (figura \ref{fab}), el cual describe cómo se realiza el proceso de fabricación de un coche.
+Por último, se ha realizado un diagrama BPMN (figura \ref{fab}), el cual describe cómo se realiza el proceso de fabricación de un coche.
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosGestFab/Fabricacion.png}
