--- a/memoria/text/gestPers.tex
+++ b/memoria/text/gestPers.tex
@@ -53,7 +53,7 @@ Se ha creado un nuevo puesto de trabajo, Director de marketing y se ha simulado 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosGestPers/kanban.png}
-    \caption{Vista kanban con los candidatos y su estado en el proceso de reclutamiento}
+    \caption{Vista kanban con los candidatos y su estado e el proceso de reclutamiento}
     \label{fig:enter-label}
 \end{figure}
 \paragraph{}
