--- a/memoria/text/recomFin.tex
+++ b/memoria/text/recomFin.tex
@@ -128,4 +128,4 @@ Tras analizar si el software analizado cumple cada uno de los factores relevante
 Tras varios meses realizando la evaluación del software de Odoo hemos descubierto un software que no permite gestionar nuestra empresa en su totalidad, desde la contratación de personal hasta la organización de nuestro inventario. Odoo tiene sus puntos fuertes y otros no tan buenos. Durante la realización de pruebas sistemáticas considerábamos que este software no era adecuado para nuestra empresa, sin embargo, al realizar una evaluación objetiva y analizando diversos factores que engloban las necesidades de la empresa, UZ-on-Marketing. La explicación a este descontento durante la evaluación con este ERP se debe a la pronunciada curva de aprendizaje y la complejidad de este software para un persona que nunca ha utilizado un sistema de información similar a este. A pesar de estos factores, las funcionalidades que nos brinda este software son muy beneficiosas para nuestras necesidades. La tabla de resultados nos ha permitido realizar una evaluación totalmente objetiva y dejando de lado nuestras percepciones y opiniones.
 
 \paragraph{}
-Por lo tanto, objetivamente hemos obtenido una puntuación de 40 sobre 60. Esto significa que se encuentra en el segundo rango, muy cerca del tercero. Siguiendo el criterio obtenido, se debería consultar con otro experto para estar completamente seguros en la decisión final. Sin embargo, consideramos que este valor está muy cerca del ultimo rango. Por lo tanto, recomendamos adquirir este software, siempre y cuando se contrate un experto o se realice una formación previa a los trabajadores para reducir el tiempo de aprendizaje. Y de esta forma, subsanamos las carencias obtenidas en la tabla de agregación de resultados.
+Por lo tanto, objetivamente hemos obtenido una puntuación de 40 sobre 60. Esto significa que se encuentra en el segundo rango, muy cerca del tercero. Siguiendo el criterio obtenido, se debería consultar con otro experto para estar completamente seguros en la decisión final. Sin embargo, consideramos que este valor está muy cerca del último rango. Por lo tanto, recomendamos adquirir este software, siempre y cuando se contrate un experto o se realice una formación previa a los trabajadores para reducir el tiempo de aprendizaje. Y de esta forma, subsanamos las carencias obtenidas en la tabla de agregación de resultados.
