--- a/memoria/text/relacion.tex
+++ b/memoria/text/relacion.tex
@@ -20,7 +20,9 @@ Además, desde la vista de Kanban del módulo de CRM se puede observar que se ha
 La empresa de Mercadona nos ha pedido una reunión para la semana siguiente por lo que el lead se ha convertido en una oportunidad, para ello se ha hecho clic en Convertir a oportunidad desde el lead correspondiente y se ha asignado al usuario Pedro como comercial y al equipo de ventas \textit{Ventas}. Además, desde el apartado de reuniones de la oportunidad se ha configurado una reunión se ha añadido al calendario una reunión para el 1 de mayo de 2024 de 9:00 a 10:00 con Lucía que es el contacto de Mercadona.
 \paragraph{}
 Tras la reunión, nos ha pedido que le enviemos un presupuesto para ello, desde la vista de la oportunidad se ha hecho clic en Nuevo presupuesto. Se ha creado un presupuesto con la información correspondiente y se le ha enviado por correo, pasando la venta al estado de Calificado y a Propuesta arrastrando la venta de un estado a otro. El cliente tras examinarlo nos ha pedido una reducción de un 5\% de descuento, para ello hemos tenido que activar la opción de Descuentos en los ajustes del módulo de Ventas. De esta manera se ha podido agregar un descuento del 5\% al presupuesto y se lo hemos vuelto a enviar al cliente. Finalmente, el cliente confirma el segundo presupuestos y se cierra el acuerdo, pasando la venta al estado de Ganado.
+\newpage
 \subsection{Resultados y análisis}
+\paragraph{}
 Durante este apartado se ha realizado la configuración de los módulos de Odoo necesarios para la gestión la relación de los clientes y las ventas. Se ha simulado un proceso de venta de un coche Mini que ha sido ofrecido a varios clientes.
 \begin{figure}[h]
     \centering
@@ -28,7 +30,8 @@ Durante este apartado se ha realizado la configuración de los módulos de Odoo 
     \caption{Lista de clientes de la compañía con sus respectivos contactos}
     \label{fig:enter-label}
 \end{figure}
-Durante el proceso se han creado 2 iniciativas para dos clientes interesados. Se ha creado un presupuesto para uno de ellos. Finalmente, en una segunda revisión del presupuesto se ha aplicado un descuento del 5\% de descuento sobre el precio y se ha cerrado el acuerdo de venta.
+\paragraph{}    
+En este proceso se han creado 2 iniciativas para dos clientes interesados. Se ha creado un presupuesto para uno de ellos. Finalmente, en una segunda revisión del presupuesto se ha aplicado un descuento del 5\% de descuento sobre el precio y se ha cerrado el acuerdo de venta.
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosRelacion/presupuesto.png}
