--- a/memoria/text/gestPers.tex
+++ b/memoria/text/gestPers.tex
@@ -19,6 +19,7 @@ En cuanto al proceso de reclutamiento, vamos a simular una operación en el que 
 \end{figure}
 \paragraph{}
 A continuación, en el modulo de reclutamiento se ha hecho clic al enlace Página de trabajos del puesto de Director de marketing. Se ha rellenado el formulario de la solicitud con la información correspondiente y se ha añadido el currículum y se ha enviado. Desde el módulo de Reclutamiento se ha podido ver la solicitud del puesto. Se ha hecho clic en él y se ha asignado en la opción de habilidades un nivel avanzado de Alemán y Francés y 1 año de experiencia en operaciones internacionales con suiza. Se ha realizado el proceso de reclutamiento con dos entrevistas se ha propuesto un contrato y se ha firmado. Finalmente, se ha creado un usuario de tipo empleado para el nuevo Director de marketing.
+\newpage
 \subsection{Resultados y análisis}
 \paragraph{}
 Durante este apartado se ha creado en la compañía matriz un departamento de Administración, de Ventas y de Servicios profesionales, en la rama CochesMA.UK un departamento de Gestión y de Ventas y en la rama CochesMA.US un departamento de Personal y de Servicios profesionales. 
@@ -64,7 +65,7 @@ Por último, se ha creado un BPMN del proceso de reclutamiento realizado.
     \caption{Solicitud al puesto de Director de marketing}
     \label{fig:enter-label}
 \end{figure}
-
+\newpage
 \subsection{Conclusiones}
 \paragraph{}
 Durante la evaluación de la gestión de personal en Odoo, hemos observado que la parte relacionada con la creación de departamentos, puestos de trabajo y empleados se llevó a cabo de manera adecuada y eficiente. Se ha demostrado una comprensión clara de cómo configurar la estructura organizativa y asignar roles y responsabilidades dentro de la empresa. 
