--- a/memoria/text/recomFin.tex
+++ b/memoria/text/recomFin.tex
@@ -15,7 +15,7 @@ Tras haber analizado cada uno de las distintas funcionalidades que nos ofrece Od
     \caption{ISO/IEC 25010}
     \label{fig:enter-label}
 \end{figure}
-
+\newpage
 \subsection{Resultados y análisis}
 \paragraph{}
 Para hacer el análsis de Odoo y determinar si debemos adquirir hemos seleccionado 10 factores de la ISO/IEC 25010, como hemos comentado previamente.
