--- a/memoria/text/relacion.tex
+++ b/memoria/text/relacion.tex
@@ -38,6 +38,7 @@ En este proceso se han creado 2 iniciativas para dos clientes interesados. Se ha
     \caption{Presupuesto de la venta}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Este proceso también está sincronizado con el módulo de Facturación por lo que el estado de la venta se puede observar desde la siguiente vista.
 \newpage
 \begin{figure}[h]
@@ -46,6 +47,7 @@ Este proceso también está sincronizado con el módulo de Facturación por lo q
     \caption{Lista de las ventas desde el módulo de Facturación}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Durante todo el proceso de venta se ha ido actualizando la vista Kanban del módulo \textit{CRM} que permite una vista general del estado de las iniciativas y ventas.
 \begin{figure}[h]
     \centering
@@ -53,6 +55,7 @@ Durante todo el proceso de venta se ha ido actualizando la vista Kanban del mód
     \caption{Vista Kanban del flujo de ventas del módulo CRM}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Por último, se ha realiza un BPMN sobre el proceso de venta.
 \begin{figure}[h]
     \centering
